# gapinmyresume-mcp

./: .env.example  .gitignore  README.md  SETUP.md  prompts.py  pyproject.toml  requirements.txt  server.py  test_cli.py
sample-job-descriptions/: senior-software-engineer.txt
sample-resumes/: .gitkeep  Leela Krishna MBA.docx  Leela Krishna Sarepalli v1.docx  LeelaKrishna Resume.docx
